--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@elysiajs/openapi": "^1.4.14",
     "better-auth": "^1.4.17",
     "drizzle-orm": "^0.45.1",
-    "elysia": "latest",
+    "elysia": "^1.4.22",
     "pg": "^8.17.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/pg": "^8.16.0",
-    "bun-types": "latest",
+    "bun-types": "^1.3.7",
     "drizzle-kit": "^0.31.8",
     "tsx": "^4.21.0"
   },
