--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "drizzle-orm": "^0.45.1",
     "elysia": "^1.4.22",
     "pg": "^8.17.2",
+    "resend": "^6.9.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
