--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "better-auth": "^1.4.17",
     "drizzle-orm": "^0.45.1",
     "elysia": "^1.4.22",
+    "oracledb": "^6.10.0",
     "pg": "^8.17.2",
     "resend": "^6.9.1",
+    "typeorm": "^0.3.28",
     "zod": "^4.3.6"
   },
   "devDependencies": {
